src/snapshot_middleware/snapshots/librojo__snapshot_middleware__csv__test__csv_from_vfs.snap
---
source: src/snapshot_middleware/csv.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.csv
  relevant_paths:
    - /foo.csv
    - /foo.meta.json
  context:
    emit_legacy_scripts: true
  middleware: ~
  specified_id:
    Ref: "00000000000000000000000000000000"
name: foo
class_name: LocalizationTable
properties:
  Contents:
    String: "[{\"key\":\"Ack\",\"example\":\"An exclamation of despair\",\"source\":\"Ack!\",\"values\":{\"es\":\"¡Ay!\"}}]"
children: []

